--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
 name: ina226
-description: Support for I2C INA226 current/voltage measuring IC.
+description: Support for the TI INA226 I2C current/voltage measuring IC.
 environment:
   sdk: ^2.0.0-alpha.188
